--- a/Poisson/Poisson.vcxproj.filters
+++ b/Poisson/Poisson.vcxproj.filters
@@ -24,4 +24,15 @@
       <Filter>Resource Files</Filter>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\fftw-3.3.4-dll32\fftw3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\fftw-3.3.4-dll32\libfftw3-3.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Library Include="..\fftw-3.3.4-dll32\libfftw3-3.lib" />
+  </ItemGroup>
 </Project>
